--- a/starter/program/tele_op.html
+++ b/starter/program/tele_op.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../../starter/program/tele_op.html" class="active"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><a href="../../state_machine/index.html"><strong aria-hidden="true">4.</strong> The State Machine</a></li><li class="chapter-item expanded "><a href="../../hardware/index.html"><strong aria-hidden="true">5.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../../vcs/index.html"><strong aria-hidden="true">6.</strong> Version Control</a></li><li class="chapter-item expanded "><a href="../../meta/index.html"><strong aria-hidden="true">7.</strong> Metaprogramming</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../meta/logger.html"><strong aria-hidden="true">7.1.</strong> Logger</a></li><li class="chapter-item expanded "><a href="../../meta/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../../deps/index.html"><strong aria-hidden="true">8.</strong> Dependencies</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../../starter/program/tele_op.html" class="active"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.2.</strong> Setting Options</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.</strong> Dependencies</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,7 +135,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="teleop-program"><a class="header" href="#teleop-program">TeleOp Program</a></h1>
-<p>If you haven't done FTC before, a TeleOp is Tele-Operation: A period of time when <em>you</em>, the human, control the robot. A TeleOp therefore needs take input from a source (in 2021, an xbox controller), and somehow transform it into actions done by the robot. That's the part you make.</p>
+<p>A TeleOp is Tele-Operation: A period of time when <em>you</em>, the human, control the robot. A TeleOp therefore needs take input from a source (in 2021, an xbox controller), and somehow transform it into actions done by the robot. That's the part you make.</p>
 <p>Let's get right into it, with the following starter code:</p>
 <pre><code class="language-java">MyTeleOp.java
 
@@ -172,20 +172,8 @@ public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
     }
 }
 </code></pre>
-<p>This is a <em>lot</em> of code, and we'll break it down more in the next chapter. For now, focus on the methods <code>setup() -&gt; void</code> and <code>act() -&gt; void</code>.</p>
-<p>For now, we'll set the goal of moving the motor counterclockwise when hitting the left trigger of the controller, and clockwise on hitting the right trigger.</p>
-<p>Let's start with the setup part of the program. You might want to import <code>myMotor</code> into this class to be able to use it easily, like this:</p>
-<pre><code class="language-java">public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
-    DcMotor myMotor;
-
-    @Override
-    protected void setup() {
-        myMotor = robotCfg.getMyMotor();
-    }
-}
-</code></pre>
-<p>You can do this even if you're not using the getter pattern. This code tells the program to save a reference to the DcMotor on init. This step isn't necessary, and later this code might be bad. It saves some work if you want to write slightly less though.</p>
-<p>The next step is to actually do something with the motor. For now, let's compute the power the motor should be moved with.</p>
+<p>This is a <em>lot</em> of methods, and we'll break it down more in the chapter 3. For now, we'll set the goal of moving the motor counterclockwise with the left trigger of the controller, and clockwise with the right trigger.</p>
+<p>To start, we need to figure out how much the motor should move. To do this, we'll need to transform the input from the controller into an output for the motor to be able to use.</p>
 <pre><code class="language-java">protected void act() {
     double power = gamepad1.left_trigger - gamepad1.right_trigger;
 }
@@ -193,7 +181,7 @@ public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
 <p>You can see that <code>gamepad1.left_trigger</code> is not a reference to hardware, but a value. This is another one of the ElectronVolts library's simplifications: Managing the input values. Next, we want to send this computed value to the DC motor.</p>
 <pre><code class="language-java">protected void act() {
     double power = gamepad1.left_trigger - gamepad1.right_trigger;
-    myMotor.setPower(power);
+    robotCfg.getMyMotor().setPower(power);
 }
 </code></pre>
 <p>This is relatively straightforward. Now, after the program is initialized and the play button is pressed, the <code>act</code> function will run in a loop, so you don't have to worry about the power only being set once.</p>
@@ -222,9 +210,7 @@ public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
     }
 
     @Override
-    protected void setup() {
-        myMotor = robotCfg.getMyMotor();
-    }
+    protected void setup() {}
 
     @Override
     protected void setup_act() {}
@@ -235,7 +221,7 @@ public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
     @Override
     protected void act() {
         double power = gamepad1.left_trigger - gamepad1.right_trigger;
-        myMotor.setPower(power);
+        robotCfg.getMyMotor().setPower(power);
     }
 
     @Override
@@ -247,7 +233,6 @@ public class MyTeleOp extends AbstractTeleOp&lt;MyRobotCfg&gt; {
     }
 }
 </code></pre>
-<p>Don't worry about all of those empty methods, we will go into more detail about those in the next chapter.</p>
 
                     </main>
 
